--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -78,6 +78,7 @@
   <string name="CONNECTING">Нет ответа, пожалуйста, попробуйте еще раз</string>
   <string name="CONNECTING_1">Подключение к интернету, пожалуйста, подождите</string>
   <string name="CONN_INTERRUPTED">Соединение прервано, пожалуйста, проверьте подключение веб-камеры</string>
+  <string name="CONTINUE_REGISTER">Продолжить регистрацию</string>
   <string name="CREATING">Загрузка&#8230;</string>
   <string name="CURRENT_PWD">Текущий Пароль</string>
   <string name="Cable_Mode">Проводной режим</string>
@@ -190,6 +191,8 @@
   <string name="DOOR_WIFI_HINT">Светодиодный индикатор состояния</string>
   <string name="DOOR_WRONG_PSW">неправильный пароль</string>
   <string name="DOOR_WRONG_PSW_MSG">Неверный пароль двери</string>
+  <string name="DOWNLOAD_MSG_PICTURE">Загрузить изображение сообщения</string>
+  <string name="DOWNLOAD_MSG_PICTURE_EXPLAIN">После закрытия сообщения о тревоге распознавания лиц не будет загружено</string>
   <string name="DailyGreatTips_Full">Число коллекции Ежедневное чудо достиг верхнего предела 50, собирается удалять?</string>
   <string name="Daily_Great_NO_CONTENTS">Без содержания</string>
   <string name="Dec">Dec.</string>
@@ -264,6 +267,8 @@
   <string name="FACEBOOK_PERMISSIONS_ONLYME">Только я</string>
   <string name="FACEBOOK_PERMISSIONS_PUBLIC">общественного</string>
   <string name="FACE_COLLAPSE">коллапс</string>
+  <string name="FACE_NOT_RECOGNIZED">Лицо не распознается</string>
+  <string name="FACE_RECOGNITION">Распознавание лица</string>
   <string name="FAQ_SINA_WEIBO">Не поддерживайте живое видео в блоге Sina</string>
   <string name="FAQ_SINA_WEIBO_TEXT1">1, чтобы убедиться, что учетная запись имеет аутентификацию подлинности в блоге Sina и не является учетной записью черного списка.</string>
   <string name="FAQ_SINA_WEIBO_TEXT2">2, нынешний Сина живет только для поддержки материкового мира Китая.</string>
@@ -421,6 +426,8 @@
   <string name="MAGNETISM_ON_PUSH">%s открыт</string>
   <string name="MESSAGE">Сообщения</string>
   <string name="MESSAGES_ADD_FACE_TIPS">Набор успешно, он будет добавлен к контрольному лицу \"управление Face\"</string>
+  <string name="MESSAGES_AGE">%s лет</string>
+  <string name="MESSAGES_BLURRY">Размытые</string>
   <string name="MESSAGES_DELETE_FACE_BTN">Удалить лицо</string>
   <string name="MESSAGES_DELETE_FACE_MES">Удалить лицо и сообщения</string>
   <string name="MESSAGES_DELETE_FCAE_POP">Удалить лицо?</string>
@@ -428,6 +435,7 @@
   <string name="MESSAGES_DELETE_ICON_MES">Удалить значок и сообщения</string>
   <string name="MESSAGES_DELETE_ICON_POP">Удалить значок и все связанные с ним сообщения?</string>
   <string name="MESSAGES_DELETE_POP">Удалить лицо и все связанные с ним сообщения?</string>
+  <string name="MESSAGES_EXPLAIN">Пример изображения:</string>
   <string name="MESSAGES_FACE_ANALYSIS">Анализ пассажирского потока</string>
   <string name="MESSAGES_FACE_IDENTIFY">Выявить</string>
   <string name="MESSAGES_FACE_INFO">Лицо информация</string>
@@ -442,10 +450,15 @@
   <string name="MESSAGES_FACE_VISIT_TIMES">Посетите %s раз в течение 30 дней</string>
   <string name="MESSAGES_FACE_YESTERDAY_VISIT">Вчерашний визит</string>
   <string name="MESSAGES_FILTER_ALL">Все</string>
-  <string name="MESSAGES_FILTER_STRANGER">Незнакомец</string>
+  <string name="MESSAGES_FILTER_STRANGER">Посетители</string>
+  <string name="MESSAGES_GENDER_FEMALE">женский</string>
+  <string name="MESSAGES_GENDER_MALE">мужчина</string>
   <string name="MESSAGES_IDENTIFY_ADD_BTN">Добавить к существующему лицу</string>
   <string name="MESSAGES_IDENTIFY_CREATE_BTN">Новое лицо</string>
   <string name="MESSAGES_IDENTIFY_POP">Новое лицо или добавление к существующему лицу улучшает точность распознавания лица</string>
+  <string name="MESSAGES_POSITIVE_FACE">Положительное лицо</string>
+  <string name="MESSAGES_REGISTER_FACE">Зарегистрировать лицо</string>
+  <string name="MESSAGES_SIDE_FACE">Лицевая сторона</string>
   <string name="MESSAGES_TIME_DAY">%s день назад</string>
   <string name="MESSAGES_TIME_HOUR">%s час назад</string>
   <string name="MESSAGES_TIME_MIN">%s мин назад</string>
@@ -578,6 +591,9 @@
   <string name="REFRESH">Обновить</string>
   <string name="REFRESHING">Обновление&#8230;</string>
   <string name="REGISTERED">Аккаунт зарегистрирован</string>
+  <string name="REGISTER_FACE_TIPS">Загрузите четкую фотографию лица</string>
+  <string name="REGISTRATION_FAILED">Ошибка регистрации</string>
+  <string name="REGISTRATION_SECCESS">Вы успешно зарегистрировались</string>
   <string name="RELEASE_TO_LOAD">Отпустите к нагрузке</string>
   <string name="RELEASE_TO_REFRESH">Отпустите для обновления</string>
   <string name="REMAIN_SPACE">избыток %s GB</string>
@@ -1146,6 +1162,7 @@
   <string name="WIRED_UPGRADE_NON_LAN">Перед настройкой подключите телефон и устройство к той же сети</string>
   <string name="WONDER_TODAY_H_M">Сегодня HH:mm</string>
   <string name="WONDER_YESTERDAY_H_M">Вчера HH:mm</string>
+  <string name="WRONG_FORMAT">Неверный формат, поддержка только .jpg/.png/.bmp</string>
   <string name="WeChat">WeChat</string>
   <string name="Weibo">Weibo</string>
   <string name="WiFiLight_BlueFlashing">Синий мигающий: режим конфигурации WiFi</string>
